@@ -1643,11 +1643,14 @@ void gCycle::RemoveFromGame()
         this->Kill();
 
         // really kill the cycle even on the client
-        if ( this->Alive() )
+        if ( this->Alive() && lastTime < se_GameTime() + 10.0f )
         {
             Die( lastTime );
             tNEW(gExplosion)(grid, pos, lastTime, color_);
         }
+
+        if ( sn_GetNetState() == nSERVER )
+            RequestSync();
     }
 
     if (currentWall)
